# Layoutie

./: BitmapExport.cpp  BitmapExport.h  BitmapExport.ui  BoardGrid.cpp  BoardGrid.h  BoardScene.cpp  BoardScene.h  BoardView.cpp  BoardView.h  CMakeLists.txt  ComponentFactory.cpp  ComponentFactory.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProjectView.cpp  ProjectView.h  README  Settings.cpp  Settings.h  layoutie.kdev4  main.cpp
Components/: CircleItem.cpp  CircleItem.h  ComponentItem.cpp  ComponentItem.h  PadItem.cpp  PadItem.h  SMDItem.cpp  SMDItem.h  TextItem.cpp  TextItem.h  TrackItem.cpp  TrackItem.h  ZoneItem.cpp  ZoneItem.h
